--- a/views/home.pug
+++ b/views/home.pug
@@ -12,7 +12,7 @@ mixin message(opp, name)
 
 append links 
     li(style="float: right;")
-        a(href="/loggout") Loggout 
+        a(href="/logout") logout 
 
 block content
     .dashboard 
