--- a/views/index.pug
+++ b/views/index.pug
@@ -1,8 +1,8 @@
 extends layout
 block content 
     .login-panel 
-        img(src="img/login-img.jpg")
+        img(src="img/MythendiumLogo_1_70.jpg")
         include includes/login-form 
     .register-panel 
-        img(src="img/register-img.png")
+        img(src="img/zeus.jpg" class="center")
         include includes/register-form
