updated greece page

--- a/views/home.pug
+++ b/views/home.pug
@@ -9,12 +9,16 @@ mixin message(opp, name)
             span=name 
             |  to our website
 
-
 append links 
     li(style="float: right;")
         a(href="/logout") logout 
+
+append links 
+    li(style="float: right;")
+        a(href="/greese") greese 
 
 block content
     .dashboard 
         .user 
             +message(opp, name)
+
