--- a/views/greese.pug
+++ b/views/greese.pug
@@ -1,8 +1,17 @@
-html
-    head
-        title Hello World
-    Body
-        - var name = "<span>Hello</span>"
-        - var myId = "p"
-        p(id=myId) This is paragraph my name #{name} 
-       
+extends layout
+
+mixin message(opp, name)
+    if(opp)
+        h1.greeting Logged in as 
+            span=name 
+    else 
+        h1.greeting Greese
+
+append links 
+    li(style="float: right;")
+        a(href="/logout") logout 
+
+block content
+    .dashboard 
+        .user 
+            +message(opp, name)
