--- a/views/home.pug
+++ b/views/home.pug
@@ -18,3 +18,10 @@ block content
         .user 
             +message(opp, name)
 
+            br
+            br
+            h4 Welcome to Mythendium!  Test your knowledge of gods and goddesses of the Mythologies above and see if you can guess the gods displayed!
+            br  
+            div 
+            - const myAttributes = {"src": "/img/MythendiumLogo_1_70.jpg", "alt": "This is my photo"}
+        img&attributes(myAttributes)
