--- a/views/chinese.pug
+++ b/views/chinese.pug
@@ -5,7 +5,7 @@ mixin message(opp, name)
         h1.greeting Logged in as 
             span=name 
     else 
-        h1.greeting Celtic Mythology
+        h1.greeting Chinese Mythology
 
 append links 
     li(style="float: right;")
