--- a/views/home.pug
+++ b/views/home.pug
@@ -22,6 +22,7 @@ block content
             br
             h4 Welcome to Mythendium!  Test your knowledge of gods and goddesses of the Mythologies above and see if you can guess the gods displayed!
             br  
-            div 
-            - const myAttributes = {"src": "/img/MythendiumLogo_1_70.jpg", "alt": "This is my photo"}
-        img&attributes(myAttributes)
+            img.center(src="/img/MythendiumLogo_1_70.jpg", alt="Mythendium Logo") 
+
+        //-     - const myAttributes = {"src": "/img/MythendiumLogo_1_70.jpg", "alt": "This is my photo"}
+        //- img&attributes(myAttributes)
