--- a/views/norse.pug
+++ b/views/norse.pug
@@ -15,9 +15,13 @@ block content
     .dashboard 
         .user 
             +message(opp, name)
-
+            br
+            p.text About Norse Mythology
+            br
             p Norse mythology is the body of myths of the North Germanic peoples, stemming from Norse paganism and continuing after the Christianization of Scandinavia, and into the Scandinavian folklore of the modern period. The northernmost extension of Germanic mythology, Norse mythology consists of tales of various deities, beings, and heroes derived from numerous sources from both before and after the pagan period, including medieval manuscripts, archaeological representations, and folk tradition.
-            br  
-            div 
-            - const myAttributes = {"src": "/img/bor.jpg", "alt": "This is my photo"}
-        img&attributes(myAttributes)
+            br
+            p.text Bor
+            br
+            p Bor is a primordial Norse man, the son of Buri. He married the giantess Bestla, who is a daughter of the frost giant Bolthorn. Bor and Bestla had three children who became the first gods: Odin, Vili, Ve.
+            img.center(src="/img/bor.jpg", alt="Osiris")
+
