--- a/views/greek.pug
+++ b/views/greek.pug
@@ -15,13 +15,14 @@ block content
     .dashboard 
         .user 
             +message(opp, name)
-
-            p Greek mythology is the body of myths originally told by the ancient Greeks. These stories concern the origin and the nature of the world, the lives and activities of deities, heroes, and mythological creatures, and the origins and significance of the ancient Greeks' own cult and ritual practices. Modern scholars study the myths in an attempt to shed light on the religious and political institutions of ancient Greece and its civilization, and to gain understanding of the nature of myth-making itself
-
-            br  
-            div 
-            - const myAttributes = {"src": "/img/zeus.jpg", "alt": "This is my photo"}
-        img&attributes(myAttributes)
-        
+            br
+            p.text About Greek Mythology
+            p Greek mythology is the body of myths originally told by the ancient Greeks. These stories concern the origin and the nature of the world, the lives and activities of deities, heroes, and mythological creatures, and the origins and significance of the ancient Greeks' own cult and ritual practices. Modern scholars study the myths in an attempt to shed light on the religious and political institutions of ancient Greece and its civilization, and to gain understanding of the nature of myth-making itself.
+            br
+            p.text Zeus 
+            br
+            p Zeus is the child of Cronus and Rhea, the youngest of his siblings to be born, though sometimes reckoned the eldest as the others required disgorging from Cronus's stomach. In most traditions, he is married to Hera, by whom he is usually said to have fathered Ares, Hebe, and Hephaestus.[9] At the oracle of Dodona, his consort was said to be Dione, by whom the Iliad states that he fathered Aphrodite.[12] Zeus was also infamous for his erotic escapades. These resulted in many divine and heroic offspring, including Athena, Apollo, Artemis, Hermes, Persephone, Dionysus, Perseus, Heracles, Helen of Troy, Minos, and the Muses.
+            img.center(src="/img/zeus2.jpg", alt="Zues") 
+           
 
 
