Added Nav Buttons, Removed Nav Header

--- a/views/aztec.pug
+++ b/views/aztec.pug
@@ -6,6 +6,7 @@ mixin message(opp, name)
             span=name 
     else 
         h1.greeting Aztec Mythology
+            a.button_nav(href="/quiz") Proceed to Examination
 
 append links 
     li(style="float: right;")
