--- a/views/chinese.pug
+++ b/views/chinese.pug
@@ -6,6 +6,7 @@ mixin message(opp, name)
             span=name 
     else 
         h1.greeting Chinese Mythology
+            a.button_nav(href="/egyptian") Proceed to Module # 4 
 
 append links 
     li(style="float: right;")
