--- a/views/egyptian.pug
+++ b/views/egyptian.pug
@@ -6,6 +6,7 @@ mixin message(opp, name)
             span=name 
     else 
         h1.greeting Egyptian Mythology
+            a.button_nav(href="/norse") Proceed to Module # 5
 
 append links 
     li(style="float: right;")
