--- a/views/japanese.pug
+++ b/views/japanese.pug
@@ -6,6 +6,7 @@ mixin message(opp, name)
             span=name 
     else 
         h1.greeting Japanese Mythology
+            a.button_nav(href="/aztec") Proceed to Module # 8
 
 append links 
     li(style="float: right;")
