--- a/views/roman.pug
+++ b/views/roman.pug
@@ -6,6 +6,7 @@ mixin message(opp, name)
             span=name 
     else 
         h1.greeting Roman Mythology
+            a.button_nav(href="/japanese") Proceed to Module # 7
 
 append links 
     li(style="float: right;")
