--- a/views/includes/header.pug
+++ b/views/includes/header.pug
@@ -3,19 +3,19 @@ nav
         block links
         li 
             a(href="/") Home
-        li 
-            a(href="/greek") Greek
-        li 
-            a(href="/celtic") Celtic
-        li 
-            a(href="/chinese") Chinese
-        li 
-            a(href="/egyptian") Egyptian
-        li 
-            a(href="/norse") Norse
-        li 
-            a(href="/roman") Roman
-        li 
-            a(href="/japanese") Japanese
-        li 
-            a(href="/aztec") Aztec
+        //- li 
+        //-     a(href="/greek") Greek
+        //- li 
+        //-     a(href="/celtic") Celtic
+        //- li 
+        //-     a(href="/chinese") Chinese
+        //- li 
+        //-     a(href="/egyptian") Egyptian
+        //- li 
+        //-     a(href="/norse") Norse
+        //- li 
+        //-     a(href="/roman") Roman
+        //- li 
+        //-     a(href="/japanese") Japanese
+        //- li 
+        //-     a(href="/aztec") Aztec
