--- a/views/norse.pug
+++ b/views/norse.pug
@@ -6,6 +6,7 @@ mixin message(opp, name)
             span=name 
     else 
         h1.greeting Norse Mythology
+            a.button_nav(href="/roman") Proceed to Module # 6
 
 append links 
     li(style="float: right;")
