--- a/public/css/style.css
+++ b/public/css/style.css
@@ -167,6 +167,14 @@ p {
     color: rgb(112, 172, 16);
 }
 
+.centerZues {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    padding: 44px
+}
+
 .center {
     display: block;
     margin-left: auto;
@@ -329,4 +337,55 @@ p.colors a {
 
 .text_center {
     text-align: center;
+}
+
+#quizTop {
+    margin-top: 50px;
+}
+
+.grid {
+    width: 600px;
+    height: 500px;
+    margin: 0 auto;
+    background-color: #fff;
+    padding: 10px 50px 50px 50px;
+    border-radius: 50px;
+    border: 2px solid #cbcbcb;
+    box-shadow: 10px 15px 5px #cbcbcb;
+
+}
+
+#quiz {
+    font-family: sans-serif;
+    background-color: #57636e;
+    font-size: 50px;
+    text-align: center;
+    color: #fff;
+    padding: 2px 0px;
+    border-radius: 50px;
+}
+
+#question {
+    font-family: sans-serif;
+    font-size: 30px;
+    color: #5a6772;
+
+}
+
+.buttons {
+    margin-top: 30px
+}
+
+#btn0,
+#btn1,
+#btn2,
+#btn3 {
+    background-color: #778897;
+    width: 250px;
+    font-size: 20px;
+    color: #fff;
+    border: 1px solid #1d3c;
+    border-radius: 50px;
+    margin: 10px 40px 10px 0px;
+    padding: 10px 10px;
 }
