--- a/views/Quiz.pug
+++ b/views/Quiz.pug
@@ -1,6 +1,6 @@
 link(rel="stylesheet" href="css/style.css")
 
 div.container  
-    a.btn.btn1.button(href="/final_exam") ENTER THE FINAL EXAM
+    a.btn.btn1.button(href="/final_exam") ENTER THE EXAM
 
 
