--- a/views/index.pug
+++ b/views/index.pug
@@ -4,5 +4,5 @@ block content
         img(src="img/MythendiumLogo_1_70.jpg")
         include includes/login-form 
     .register-panel 
-        img(src="img/zeus.jpg" class="center")
+        img(src="img/zeus.jpg" class="centerZues")
         include includes/register-form
