--- a/public/css/style.css
+++ b/public/css/style.css
@@ -389,3 +389,8 @@ p.colors a {
     margin: 10px 40px 10px 0px;
     padding: 10px 10px;
 }
+
+#progress {
+    color: #2b2b2b;
+    font-size: 18px;
+}
