--- a/public/css/style.css
+++ b/public/css/style.css
@@ -352,6 +352,7 @@ p.colors a {
     border-radius: 50px;
     border: 2px solid #cbcbcb;
     box-shadow: 10px 15px 5px #cbcbcb;
+    text-align: center;
 
 }
 
@@ -393,4 +394,25 @@ p.colors a {
 #progress {
     color: #2b2b2b;
     font-size: 18px;
+}
+
+#btn0:hover,
+#btn1:hover,
+#btn2:hover,
+#btn3:hover {
+
+    cursor: pointer;
+    background-color: #57636e;
+
+
+}
+
+#btn0:focus,
+#btn1:focus,
+#btn2:focus,
+#btn3:focus {
+
+    outline: 0;
+
+
 }
