--- a/views/Quiz1.html
+++ b/views/Quiz1.html
@@ -18,36 +18,32 @@
             border-radius: 50px;
             border: 2px solid #cbcbcb;
             box-shadow: 10px 15px 5px #cbcbcb;
-            text-align: center;
-
         }
 
         .grid h1 {
-            font-family: sans-serif;
+            font-family: "sans-serif";
             background-color: #57636e;
             font-size: 60px;
             text-align: center;
-            color: #fff;
+            color: #ffffff;
             padding: 2px 0px;
             border-radius: 50px;
         }
 
-        .grid #question {
-            font-family: sans-serif;
+        #score {
+            color: #5A6772;
+            text-align: center;
             font-size: 30px;
-            color: #5a6772;
-
         }
 
         .grid #question {
-            font-family: sans-serif;
+            font-family: "monospace";
             font-size: 30px;
-            color: #5a6772;
+            color: #5A6772;
         }
-
 
         .buttons {
-            margin-top: 30px
+            margin-top: 30px;
         }
 
         #btn0,
@@ -58,40 +54,35 @@
             width: 250px;
             font-size: 20px;
             color: #fff;
-            border: 1px solid #1d3c6a;
+            border: 1px solid #1D3C6A;
             border-radius: 50px;
             margin: 10px 40px 10px 0px;
             padding: 10px 10px;
-        }
-
-        #progress {
-            color: #2b2b2b;
-            font-size: 18px;
         }
 
         #btn0:hover,
         #btn1:hover,
         #btn2:hover,
         #btn3:hover {
-
             cursor: pointer;
             background-color: #57636e;
-
-
         }
 
         #btn0:focus,
         #btn1:focus,
         #btn2:focus,
         #btn3:focus {
-
             outline: 0;
+        }
+
+        #progress {
+            color: #2b2b2b;
+            font-size: 18px;
         }
     </style>
 </head>
 
 <body>
-
     <div class="grid">
         <div id="quiz">
             <h1>Quiz</h1>
@@ -105,17 +96,22 @@
                 <button id="btn2"><span id="choice2"></span></button>
                 <button id="btn3"><span id="choice3"></span></button>
             </div>
+
             <hr style="margin-top: 50px">
             <footer>
-                <p id="progress">Question x of y.</p>
+                <p id="progress">Question x of y</p>
             </footer>
-
-
         </div>
     </div>
 
 
+    <!-- <script src="../question.js"></script>
+    <script src="../quiz_controller.js"></script>
+    <script src="../question_app.js"></script> -->
 
+    <script type="text.javascript" src="../question.js"></script>
+    <script type="text.javascript" src="../quiz_controller.js"></script>
+    <script type="text.javascript" src="../question_app.js"></script>
 </body>
 
 </html>
