--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,9 +3,17 @@
     margin: 0;
 }
 
+
 body {
-    background-color: #F0F0F0;
+    background: url(../img/background-image.jpg);
+    background-size: auto;
+ 
+
 }
+
+
+
+
 
 .table,
 .table td,
