--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,7 +5,7 @@
 
 
 body {
-    background: url(../img/background-image.jpg);
+    background: url(../img/HTMLmythBackground1.jpg);
     background-size: auto;
  
 
@@ -31,6 +31,7 @@ nav {
     background-color: #fff;
     border: 1px solid #ccc;
     margin-bottom: 5px;
+    border-radius: 25px;
 }
 
 nav ul {
@@ -50,6 +51,7 @@ nav ul li a {
 
 nav ul li a:hover {
     background-color: #F0F0F0;
+    border-radius: 25px;
 }
 
 .page-wrapper {
@@ -63,6 +65,7 @@ nav ul li a:hover {
     padding: 20px 20px 50px 20px;
     border: 1px solid #ccc;
     background-color: #fff;
+    border-radius: 25px;
 }
 
 .login-panel {
@@ -97,27 +100,31 @@ input[type="password"] {
     font-size: 1.05em;
     background-color: #F5F5F5;
     border: 1px solid #ccc;
+    border-radius: 25px;
 }
 
 input[type="submit"] {
     float: right;
     padding: 7px 20px;
     font-size: 1.06em;
-    background-color: #0796cf;
-    color: #fff;
+    background-color: #F5F5F5;
+    color: black;
     border: 1px solid #0285b9;
     cursor: pointer;
     margin-top: 4px;
+    border-radius: 25px;
 }
 
 input[type="text"]:focus,
 input[type="password"]:focus {
     background-color: #fff;
+    border-radius: 25px;
 }
 
 input[type="submit"]:hover {
     background-color: #0fa3dd;
     border-color: 1px solid #098ec2;
+    border-radius: 25px;
 }
 
 .error {
@@ -131,6 +138,7 @@ input[type="submit"]:hover {
     padding: 20px;
     border: 1px solid #ccc;
     background-color: #fff;
+    border-radius: 25px;
 
 }
 
@@ -151,6 +159,7 @@ textarea {
     font-size: 18px;
     padding: 10px;
     resize: vertical;
+    border-radius: 25px;
 }
 
 .post {
@@ -158,6 +167,7 @@ textarea {
     border: 1px solid #bbb;
     color: #888;
     margin-bottom: 5px;
+    border-radius: 25px;
 }
 
 p {
@@ -169,6 +179,7 @@ p {
     background-color: rgb(245, 255, 245);
     border: 1px solid rgb(210, 231, 210);
     padding: 1em;
+    border-radius: 25px;
 }
 
 .greeting span {
@@ -217,6 +228,7 @@ p {
     transition: 0.8s;
     position: relative;
     overflow: hidden;
+    
 }
 
 .btn1,
@@ -237,6 +249,7 @@ p {
     color: rgb(212, 27, 27);
     background-color:
         #09bcc2;
+        border-radius: 25px;
 
 }
 
@@ -334,6 +347,7 @@ p.colors a {
     color: rgb(204, 6, 6);
     float: right;
     font-size: 20px;
+    border-radius: 25px;
 
 }
 
