--- a/public/css/style.css
+++ b/public/css/style.css
@@ -32,6 +32,7 @@ nav {
     border: 1px solid #ccc;
     margin-bottom: 5px;
     border-radius: 25px;
+    opacity: 0.7;
 }
 
 nav ul {
@@ -66,6 +67,7 @@ nav ul li a:hover {
     border: 1px solid #ccc;
     background-color: #fff;
     border-radius: 25px;
+    opacity: 0.7;
 }
 
 .login-panel {
@@ -139,7 +141,7 @@ input[type="submit"]:hover {
     border: 1px solid #ccc;
     background-color: #fff;
     border-radius: 25px;
-
+    opacity: 0.7;
 }
 
 .user-post-area {
