Fixed some  spelling

--- a/views/includes/register-form.pug
+++ b/views/includes/register-form.pug
@@ -5,7 +5,7 @@ form(method="post" action="/register")
             td 
                 input(type="text" name="username")
         tr 
-            td Fullname 
+            td Full Name 
             td 
                 input(type="text" name="fullname")
         tr 
@@ -13,7 +13,7 @@ form(method="post" action="/register")
             td 
                 input(type="password" name="password")
         tr 
-            td Confirm password 
+            td Confirm Password 
             td 
                 input(type="password" name="confirm-password")
         tr 
