created link for initial login

--- a/views/home.pug
+++ b/views/home.pug
@@ -7,7 +7,8 @@ mixin message(opp, name)
             a.button_nav(href="/greek") Enter Module # 1
     else 
         h1.greeting Welcome 
-            span=name 
+            span=name
+            a.button_nav(href="/greek") Enter Module # 1 
             |  to our website
 
 append links 
