--- a/views/home.pug
+++ b/views/home.pug
@@ -7,7 +7,8 @@ mixin message(opp, name)
             a.button_nav(href="/greek") Enter Module # 1
     else 
         h1.greeting Welcome 
-            span=name 
+            span=name
+            a.button_nav(href="/greek") Enter Module # 1 
             |  to our website
 
 append links 
@@ -21,7 +22,7 @@ block content
 
             br
             br
-            h3.text_center Welcome to Mythendium!  Please proceed through the modules and complete examination at the end.
+            h2.text_center Welcome to Mythendium!  Please proceed through the modules and complete the examination when you're finished.
             br
             br
             img.center(src="/img/MythendiumLogo_1_70.jpg", alt="Mythendium Logo") 
